增加env.conf文件，用于tomcat的业务配置